--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@monaco-editor/react": "^4.7.0",
     "emmet-monaco-es": "^5.6.1",
     "file-saver": "^2.0.5",
+    "firebase": "^12.7.0",
     "jszip": "^3.10.1",
     "lz-string": "^1.5.0",
     "prettier": "^3.7.4",
